--- a/src/main/resources/views/Formatador.fxml
+++ b/src/main/resources/views/Formatador.fxml
@@ -85,7 +85,7 @@
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
             <ScrollPane fx:id="scrollDeveres" fitToHeight="true" fitToWidth="true" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                        <VBox fx:id="deveres" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
+                        <VBox fx:id="paneDeveres" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
                             <children>
                      <Label alignment="CENTER" prefHeight="18.0" prefWidth="316.0" text="Justificar com deveres" textAlignment="CENTER">
                         <font>
@@ -101,7 +101,7 @@
             </ScrollPane>
             <ScrollPane fx:id="scrollProibicoes" fitToHeight="true" fitToWidth="true" layoutX="10.0" layoutY="10.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                <content>
-                  <VBox fx:id="proibicoes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
+                  <VBox fx:id="paneProibicoes" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="20.0">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
